# Playground

./: LICENSE  README.md  pyproject.toml  quick_build_wheel.sh
dataset/: tcp_generate.txt  tcp_real.txt
examples/flyshot/: p7a_shoot_link1.py
model/: scene.xml
model/assets/: camera.stl  p7a_900_base_link.STL  p7a_900_link2.STL  p7a_900_link3.STL  p7a_900_link4.STL  p7a_900_link5.STL  p7a_900_link6.STL  pc.stl  stage_axis.stl  stage_base.stl  workpiece_link1.STL  workstation.stl
model/common/: default.xml
model/end_effector/: camera.xml
model/obstacle/: pc.xml  workstation.xml
model/robot/: p7a_900_robot.xml  p7a_robot_link.urdf
model/stage/: stage.xml
model/workpiece/: workpiece_link1.xml
playground/Algorithm/: BasicAlgorithm.py  InverseKinematics.py
playground/MotionPlan/: TrajectoryPlanner.py
playground/Mujoco/: Interface.py  Pipeline.py
playground/Robot/: Robot.py
playground/Utils/: KeyboardUtils.py  LoggerUtils.py  ModelEditUtils.py  PltUtils.py  RandomUtils.py  TrajectoryViewerUtils.py  TransformUtils.py
