[build-system]
requires = ["setuptools >= 59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playground"
version = "0.0.0"
authors = [
  { name="Zhang Zhaowen", email="zhaowen.zhang@micro-i.com.cn" },
]
maintainers = [
  { name="Zhang Zhaowen", email="zhaowen.zhang@micro-i.com.cn" },
]
description = "Playground based on MuJoCo"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
dependencies = [
  "imageio",
  "mujoco",
  "ruckig",
  "mujoco-python-viewer",
  "scipy",
  "imageio-ffmpeg"
]

[tool.setuptools.packages.find]
where = ["playground"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
